# ToposKG

./: .gitignore  .readthedocs.yaml  LICENSE  README.md
Topos-parser/: README.md  file_gaul_workflow.sh  file_level_one_gaul_workflow.sh  file_single_gaul_workflow.sh  gaul_level_one_workflow.sh  gaul_single_geom_workflow.sh  gaul_workflow.sh  osm_and_linking_workflow.sh  osm_and_linking_workflow_one_adm_case.sh  osm_file_workflow.sh  osm_workflow.sh  pom.xml  pyjedai_workflow.py  waterbodies.sh  workflow.sh
docker/: Dockerfile  README.md  template.ttl
docs/: class-adminstrativeunit.html  class-adminunit_level0.html  class-adminunit_level1.html  class-adminunit_level2.html  class-adminunit_level3.html  class-adminunit_level4.html  (+2981 more)
toposkg_lib/: README.md  pyproject.toml
toposkg_lib/examples/: us_states_gaul_linking.csv  us_states_test_data.csv
toposkg_lib/notebooks/: toposkg_chatbot.ipynb  toposkg_tutorial.ipynb
toposkg_lib/toposkg/: toposkg_lib_core.py  toposkg_lib_fc.py
toposkg_lib/toposkg/converter/: toposkg_lib_converter.py  toposkg_lib_csv_converter.py  toposkg_lib_geojson_converter.py  toposkg_lib_gml_converter.py  toposkg_lib_json_converter.py  toposkg_lib_kml_converter.py  toposkg_lib_shapefile_converter.py  toposkg_lib_xml_converter.py
toposkg_lib/toposkg/converter/rml/: toposkg_lib_csv_mapping_generator.py  toposkg_lib_default_mapping_generator.py  toposkg_lib_geojson_mapping_generator.py  toposkg_lib_json_mapping_generator.py  toposkg_lib_mapping_builder.py  toposkg_lib_rml_module.py  toposkg_lib_triples_map.py  toposkg_lib_xml_mapping_generator.py
(+74 files in other folders)
